--- a/labs/lab6/assets/css/q1.css
+++ b/labs/lab6/assets/css/q1.css
@@ -26,6 +26,9 @@ body, html {
     position: relative;
 }
 
+.button {
+  animation: turnback 0.45s 1;
+}
 .button:hover {
     animation: turn 0.45s 1;
     animation-fill-mode: forwards;
@@ -35,11 +38,22 @@ body, html {
 @keyframes turn {
   from {
     transform: rotate(0deg);
-    animation-delay: 5s;
   }
   to {
     transform: rotate(180deg);
     border-radius: 50%;
     opacity: 1;
+  }
+}
+
+@keyframes turnback {
+  from {
+    transform: rotate(360deg);
+    border-radius: 50%;
+    opacity: 1;
+  }
+  to {
+    transform: rotate(0deg);
+
   }
 }
